--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,3 +7,7 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-icons/font/bootstrap-icons';
+
+a, a:hover {
+    text-decoration: none;
+}
