--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,11 @@
 a, a:hover {
     text-decoration: none;
 }
+
+.comment {
+    margin: 12px 0;
+    padding: 12px;
+    background-color: rgb(235, 235, 235);
+    border: 1px solid grey;
+    border-top: 0;
+}
